--- a/Login/login.css
+++ b/Login/login.css
@@ -6,6 +6,7 @@
     font-family: Vazir ;
     src: url(./fonts/Vazir-Medium.ttf);
 }
+
 .main > p
 {
     font-size: 30px;
@@ -38,10 +39,13 @@
     height: 30vw;
     margin: 0 auto;
     margin-top: 9%;
-    border-radius : 5px 5px 5px 5px;
+    border-radius : 12px;
     text-align: center;
     font-family: Sarvenaz;
     margin-top:9vw;
+    z-index:2;
+    position: absolute;
+    margin-left:32.5%;
 
 }
 #submit:hover{
@@ -57,15 +61,13 @@
     margin-top:2vw;
     display: flex;
     justify-content: center;
-    font-size: 17px;
+    font-size: 18px;
 }
 input
 {
     outline: none;
 }
-
-/* input[type="checkbox"] :checked
-{
-    background-color: blueviolet;
-    border-color: blueviolet;
-} */
+#register-text{
+    font-family: Sarvenaz;
+    font-size:18px;
+}
