--- a/Login/background-login.css
+++ b/Login/background-login.css
@@ -25,7 +25,7 @@ body{
 
 
 .area{
-    background: #4e54c8;  
+    background: #7831e0;  
     background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);  
     width: 100%;
     height:100vh;
